updated for lab2

--- a/1_foundations/community_contributions/1_lab1_gemini.ipynb
+++ b/1_foundations/community_contributions/1_lab1_gemini.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,17 +104,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gemini API Key exists and begins AIzaSyBf\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the keys\n",
     "\n",
     "import os\n",
-    "gemini_api_key = os.getenv('GEMINI_API_KEY')\n",
+    "google_api_key = os.getenv('GEMINI_API_KEY')\n",
     "\n",
-    "if gemini_api_key:\n",
-    "    print(f\"Gemini API Key exists and begins {gemini_api_key[:8]}\")\n",
+    "if google_api_key:\n",
+    "    print(f\"Gemini API Key exists and begins {google_api_key[:8]}\")\n",
     "else:\n",
     "    print(\"Gemini API Key not set - please head to the troubleshooting guide in the guides folder\")\n",
     "    \n"
@@ -122,14 +130,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "2 + 2 = 4\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# And now - the all important import statement\n",
-    "# If you get an import error - head over to troubleshooting guide\n",
+    "from openai import OpenAI\n",
+    "from IPython.display import Markdown, display\n",
+    "messages = [{\"role\": \"user\", \"content\": \"What is 2+2?\"}]\n",
+    "gemini = OpenAI(api_key=google_api_key, base_url=\"https://generativelanguage.googleapis.com/v1beta/openai/\")\n",
+    "model_name = \"gemini-2.0-flash\"\n",
     "\n",
-    "from google import genai"
+    "response = gemini.chat.completions.create(model=model_name, messages=messages)\n",
+    "question = response.choices[0].message.content\n",
+    "\n",
+    "display(Markdown(question))\n",
+    "\n"
    ]
   },
   {
@@ -298,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
