--- a/1_foundations/2_lab2.ipynb
+++ b/1_foundations/2_lab2.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
     "\n",
     "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
     "anthropic_api_key = os.getenv('ANTHROPIC_API_KEY')\n",
-    "google_api_key = os.getenv('GOOGLE_API_KEY')\n",
+    "google_api_key = os.getenv('GEMINI_API_KEY')\n",
     "deepseek_api_key = os.getenv('DEEPSEEK_API_KEY')\n",
     "groq_api_key = os.getenv('GROQ_API_KEY')\n",
     "\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,61 +119,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "openai = OpenAI()\n",
-    "response = openai.chat.completions.create(\n",
-    "    model=\"gpt-4o-mini\",\n",
-    "    messages=messages,\n",
-    ")\n",
+    "gemini = OpenAI(api_key=google_api_key, base_url=\"https://generativelanguage.googleapis.com/v1beta/openai/\")\n",
+    "model_name = \"gemini-2.0-flash\"\n",
+    "\n",
+    "response = gemini.chat.completions.create(model=model_name, messages=messages)\n",
     "question = response.choices[0].message.content\n",
-    "print(question)\n"
+    "\n",
+    "display(Markdown(question))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "competitors = []\n",
     "answers = []\n",
     "messages = [{\"role\": \"user\", \"content\": question}]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# The API we know well\n",
-    "\n",
-    "model_name = \"gpt-4o-mini\"\n",
-    "\n",
-    "response = openai.chat.completions.create(model=model_name, messages=messages)\n",
-    "answer = response.choices[0].message.content\n",
-    "\n",
-    "display(Markdown(answer))\n",
-    "competitors.append(model_name)\n",
-    "answers.append(answer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Anthropic has a slightly different API, and Max Tokens is required\n",
-    "\n",
-    "model_name = \"claude-3-7-sonnet-latest\"\n",
-    "\n",
-    "claude = Anthropic()\n",
-    "response = claude.messages.create(model=model_name, messages=messages, max_tokens=1000)\n",
-    "answer = response.content[0].text\n",
-    "\n",
-    "display(Markdown(answer))\n",
-    "competitors.append(model_name)\n",
-    "answers.append(answer)"
    ]
   },
   {
@@ -191,40 +154,6 @@
     "display(Markdown(answer))\n",
     "competitors.append(model_name)\n",
     "answers.append(answer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "deepseek = OpenAI(api_key=deepseek_api_key, base_url=\"https://api.deepseek.com/v1\")\n",
-    "model_name = \"deepseek-chat\"\n",
-    "\n",
-    "response = deepseek.chat.completions.create(model=model_name, messages=messages)\n",
-    "answer = response.choices[0].message.content\n",
-    "\n",
-    "display(Markdown(answer))\n",
-    "competitors.append(model_name)\n",
-    "answers.append(answer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "groq = OpenAI(api_key=groq_api_key, base_url=\"https://api.groq.com/openai/v1\")\n",
-    "model_name = \"llama-3.3-70b-versatile\"\n",
-    "\n",
-    "response = groq.chat.completions.create(model=model_name, messages=messages)\n",
-    "answer = response.choices[0].message.content\n",
-    "\n",
-    "display(Markdown(answer))\n",
-    "competitors.append(model_name)\n",
-    "answers.append(answer)\n"
    ]
   },
   {
@@ -318,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,14 +315,13 @@
    "outputs": [],
    "source": [
     "# Judgement time!\n",
+    "gemini = OpenAI(api_key=google_api_key, base_url=\"https://generativelanguage.googleapis.com/v1beta/openai/\")\n",
+    "model_name = \"gemini-2.0-flash\"\n",
     "\n",
-    "openai = OpenAI()\n",
-    "response = openai.chat.completions.create(\n",
-    "    model=\"o3-mini\",\n",
-    "    messages=judge_messages,\n",
-    ")\n",
+    "response = gemini.chat.completions.create(model=model_name, messages=judge_messages)\n",
     "results = response.choices[0].message.content\n",
-    "print(results)\n"
+    "print(results)\n",
+    "\n"
    ]
   },
   {
@@ -466,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
