updated for lab2

--- a/1_foundations/2_lab2.ipynb
+++ b/1_foundations/2_lab2.ipynb
@@ -231,7 +231,9 @@
     "# So where are we?\n",
     "\n",
     "print(competitors)\n",
-    "print(answers)\n"
+    "print(answers)\n",
+    "\n",
+    "\n"
    ]
   },
   {
